# AICamera_new

./: .gitattributes  LICENSE  README.md
AICamera/app/: CMakeLists.txt  build.gradle
AICamera/app/src/androidTest/java/com/ufo/aicamera/: ExampleInstrumentedTest.java
AICamera/app/src/main/: AndroidManifest.xml
AICamera/app/src/main/cpp/: make_h.py  native-lib.cpp
AICamera/app/src/main/cpp/c10/macros/: cmake_macros.h
AICamera/app/src/main/cpp/caffe2/proto/: torch.pb.h
AICamera/app/src/main/java/com/ufo/aicamera/: MainActivity.java
AICamera/app/src/main/res/layout/: activity_main.xml
AICamera/app/src/main/res/values/: strings.xml
AICamera/app/src/test/java/com/ufo/aicamera/: ExampleUnitTest.java
